# lnbits

./: .coverage.Vlads-MacBook-Pro.local.24340.835500  .coverage.Vlads-MacBook-Pro.local.79205.052231  .coverage.Vlads-MacBook-Pro.local.79917.036134  .dockerignore  .editorconfig  .env.example  .env.oidc.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .travis.yml  .wakatime-project  CLAUDE.md  Cashu_Chrome_extension.crx  DEADLOCK_ISSUE.md  DEV.md  Dockerfile  Dockerfile.boltz  LICENSE  Makefile  POTENTIAL_BREAKING_CHANGES.md  PR_3376_SECURITY_REVIEW.md  Pipfile  Procfile  README.md  app.json  boot.sh  build.py  build_appimage.sh  codecov.yml  conv.py  coverage.xml  crud.py  database.sqlite3  docker-compose.yml  dockerboltz.sh  example_relevant_file.py  (+43 more)
.github/: FUNDING.yml  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  something-else.md
.github/temp-wf/: docker.yml  lint.yml
.github/workflows/: appimage.yml  ci.yml  codeql.yml  docker.yml  flake8.yml  formatting.yml  integration-test.yml  integration-tests.yml  jmeter.yml  jmeter2.yml  lint.yml  linting.yml  make.yml  migration.yml  migrations.yml  mypy.yml  nix.yml  on-push.yml  on-tag.yml  openapi.yml  packaging.yml  poetry.yml  postman.yml  pylint.yml  pypi.yml  pyright.yml  regtest.yml  release-rc.yml  release.yml  tests.yml
.trunk/: logs  notifications  out  tools  trunk.yaml
.trunk/configs/: svgo.config.js
LNbits/: __init__.py  bolt11.py  db.py  helpers.py  requirements.txt  server.py  settings.py  wallets.py
LNbits/data/: database.sqlite3  schema.sql
LNbits/static/: app.js
LNbits/templates/: base.html  deletewallet.html  index.html  lnurlwallet.html  wallet.html
data/: push_notification_vapid.pem  push_notification_vapid.pub
docker/: .gitignore  README.md  docker-compose.yml  docker-scripts.sh
docker/boltzclient/: Dockerfile
docker/regtest/: .gitignore  README.md  docker-compose.yml  docker-scripts.sh  start-regtest
docker/sparkl2/: Dockerfile  entrypoint.sh
docs/: CNAME  TODO.md  _config.yml  index.md
docs/devs/: agents_extensions.md  agents_wasm_extensions.md  api.md  development.md  extensions.md  fastapi_transition.md  installation.md  swagger.html  websockets.md
docs/guide/: admin_ui.md  extension-install.md  faq.md  fastapi_transition.md  funding-sources-table.md  installation.md  oidc-authentication.md  super_user.md  user_roles.md  wallets.md
extension/: embedder.html  manifest.json
flatpak/: org.flatpak.lnbits.yml
integration/: Caddyfile  extensions-enable-all.jmx  lncalendar.jmx  lnurl-p.jmx  lnurl-p.jmx.tmp  lnurl.jmx  lnurlw-race-test.jmx  lnurlw.jmx  tpos.jmx  watchonly-satspay-tipjar.jmx  watchonly-satspay-tipjar.jmx.tmp
integration/fragments/: init-account.jmx  init-server.jmx
integration/reports/: index.html  statistics.json
lnbits/: Pipfile  __init__.py  __main__.py  app.json  app.py  auth_bearer.py  bolt11.py  bolt12_handler.py  cache.py  commands.py  config.py  db.py  decorators.py  decortors2.py  exceptions.py  ext.py  extension  extension_manager.py  extension_manger.py  extensions.py  helpers.py  jinja2_templating.py  llms_txt.py  lnurl.py  middleware.py  offers.py  payment_handler.py  payments.py  proxy_fix.py  requestvars.py  server.py  settings.py  task_manager.py  tasks.py
lnbits/core/: __init__.py  crud.py  db.py  handlers.py  helpers.py  migrations.py  models.py  payment.py  payment_handler.py  schema.sql  services.py  tasks.py  utils.py  views.py  views_api.py
lnbits/data/: schema.sql
lnbits/extensions/: overview.sqlite3  pyproject.toml
lnbits/extensions/nostrrelay/lib/nostr_relay/: LICENSE.txt  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  setup.cfg
lnbits/extensions/nostrrelay/lib/nostr_relay/docs/: 140upgrade.md  CHANGELOG.md  authentication.md  rate_limits.md
lnbits/extensions/nostrrelay/lib/nostr_relay/nostr_relay/: alembic.ini  asgi.py  auth.py  cli.py  config.py  config.yaml  errors.py  event.py  rate_limiter.py  util.py  verification.py  web.py
lnbits/extensions/nostrrelay/lib/nostr_relay/nostr_relay/alembic/: env.py
lnbits/extensions/nostrrelay/lib/nostr_relay/nostr_relay/alembic/versions/: e748549d8d91_initial_tables.py  fb1b3b1247a1_migrate_old_data.py
lnbits/extensions/nostrrelay/lib/nostr_relay/nostr_relay/storage/: __init__.py  db.py
lnbits/extensions/nostrrelay/lib/nostr_relay/test/: __init__.py  test_auth.py  test_main.py  test_rate_limiter.py  test_verification.py
lnbits/fiat/: __init__.py  base.py  paypal.py  stripe.py
lnbits/nodes/: __init__.py  base.py  cln.py  fake.py  lndrest.py  pheonixd.py
lnbits/settings/: __init__.py  auth.py  env.py  extensions.py  fees.py  funding_sources.py  lnbits.py  node.py  operations.py  persistence.py  saas.py  security.py  super_user.py  themes.py  users.py  webpush.py
lnbits/static/: app.js  bundle-components.js  bundle-components.min.js  bundle-components.min.js.old  bundle.js  bundle.min.css  bundle.min.js  vendor.json
lnbits/templates/: base.html  components.vue  displaywithdraw.html  error.html  extensions.html  index.html  legacy.html  lnurl.html  macros.jinja  pages.vue  print.html  printwithdraws.html  public.html  wallet.html  withdraw.html
lnbits/utils/: cache.py  crypto.py  exchange_rates.py  fiat_provider.py  logger.py  nostr.py  nostr_helper.py  send_mail.py
lnbits/wallets/: .breez  __init__.py  alby.py  base.py  blink.py  boltz.py  breez.py  breez_liquid.py  cashu.py  cliche.py  clightning.py  cln.py  clnrest.py  clnsocket.py  corelightning.py  corelightningrest.py  eclair.py  fake.py  fakeark.py  getalby.py  lightspark.py  lnbits.py  lnd.py  lndgrpc.py  lndrest.py  lnpay.py  lntips.py  lntxbot.py  nwc.py  opennode.py  phoenixd.py  proxy.py  spark.py  sparkl2.py  strike.py  void.py  zbd.py
lnbits/walletsfiat/: base.py  (+3 more)
tests/: README.md  conftest.py  copilot_prompt.md  docker-compose.yaml  get_api_key.js  helpers.py  mocks.py  run_api_tests.sh  run_ui_crud_tests.sh
tools/: build.py  conv.py  create_fake_admin.py  i18n-ai-tool.py  i18n-check.py  optipng.sh  preimage.py
(+1559 files in other folders)
