[metadata]
name = nostr_relay
version = attr: nostr_relay.__version__
author = Dave St.Germain
author_email = dave@st.germa.in
url = https://code.pobblelabs.org/fossil/nostr_relay
description = nostr relay
long_description = file: README.md
long_description_content_type = text/markdown
keywords = protocol
license = BSD 3-Clause License
classifiers = 
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Intended Audience :: System Administrators
	Operating System :: OS Independent
	Topic :: Internet :: WWW/HTTP

[options]
packages = nostr_relay,nostr_relay.storage
zip_safe = True
include_package_data = True
install_requires = 
	falcon
	aiosqlite
	python-rapidjson
	secp256k1
	aiohttp[speedups]
	uvicorn[standard]
	gunicorn
	setproctitle
	sqlalchemy
	alembic

[options.entry_points]
console_scripts = 
	nostr-relay = nostr_relay.cli:main

[egg_info]
tag_build = 
tag_date = 0

